--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,8 @@
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
     <color name="divider">#b6b6b6</color>
+    <color name="red_50">#80ff0000</color>
+
+    <color name="white">#fff</color>
+    <color name="white_gray">#f2f3f4</color>
 </resources>
